deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-bentivi-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-bentivi-dev
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: k8s-bentivi-dev
    spec:
      containers:
      - name: k8s-bentivi-dev
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
