k8s-service-develop.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-development-svc
  labels:
    app: backoffice-development
spec:
  selector:
    app: backoffice-development
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
