service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-bentivi-dev-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: k8s-bentivi-dev
