k8s-gateway-development.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backoffice-dev-gateway
  namespace: develop
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "backoffice-dev.pbuilders.io"
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "backoffice-dev.pbuilders.io"
    tls:
      mode: SIMPLE
      serverCertificate: sds
      privateKey: sds
      credentialName: "backoffice-dev-cert"
