k8s-virtualservice-development.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backoffice-dev-virtualservice
  namespace: develop
spec:
  hosts:
  - "backoffice-dev.pbuilders.io"
  gateways:
  - backoffice-dev-gateway
  http:
  - route:
    - destination:
        host: backoffice-development
        port:
          number: 80
